fixing webpack server

--- a/react_intro/task_5/dashboard/src/index.html
+++ b/react_intro/task_5/dashboard/src/index.html
@@ -6,6 +6,11 @@
   <title>Task 8</title>
 </head>
 <body>
-  <script src="./bundle.js"></script>
+  <div id="root-notifications"></div>
+        <div id="root"></div>
+
+        <script src="bundle.js">
+
+        </script>
 </body>
 </html>
