--- a/react_intro/task_5/dashboard/src/index.html
+++ b/react_intro/task_5/dashboard/src/index.html
@@ -9,7 +9,7 @@
   <div id="root-notifications"></div>
         <div id="root"></div>
 
-        <script src="bundle.js">
+        <script src="./bundle.js">
 
         </script>
 </body>
